--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
