--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "micro": "^10.0.1",
     "mongoose": "^8.1.1",
     "next": "13.5.6",
     "react": "^18",
